fix scrollbars

--- a/cgol-web/src/app/universe-view/universe-view.css
+++ b/cgol-web/src/app/universe-view/universe-view.css
@@ -1,3 +1,3 @@
-.mat-grid-tile {
-  /* border: solid 1px */
+.container {
+  overflow-y: hidden;
 }
