--- a/cgol-web/src/styles.scss
+++ b/cgol-web/src/styles.scss
@@ -21,5 +21,3 @@ html {
     )
   )
 );
-
-html, body { height: 100%; }
